# epsilion_wars_mmorpg_automation

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-main.yml  deploy-twink.yml  deploy.yml  linters.yml  release-main.yml  release-twink1-farmer.yml  release-twink2-farmer.yml  release-twink2-fisher.yml  release-twink3-fisher.yml  release-twink4-fisher.yml  release-twink5-fisher.yml  release-twink6-hunter.yml  release-twink7-hunter.yml  release-twink8-hunter.yml  release-twink9-fisher.yml  tests.yml
app/: __init__.py  actions.py  buttons.py  exceptions.py  grinding.py  message_parsers.py  settings.py  telegram_client.py
app/message_parsers/: __init__.py  checks.py  parsers.py
docs/: fishing.md  grinding.md
docs/assets/: grinding.webm  grinding_speedup.webm
epsilion_wars_mmorpg_automation/: actions.py  buttons.py  cli.py  exceptions.py  grinding.py  locks.py  notifications.py  settings.py  shared_state.py  stats.py  telegram_client.py  wait_utils.py
epsilion_wars_mmorpg_automation/captcha/: __init__.py  anti_captcha_provider.py  game_specific.py  image_with_numbers.py  resolvers.py  simple_emoji.py  simple_grammar.py  simple_math.py  symbol_traps_utils.py  utils.py
epsilion_wars_mmorpg_automation/game/: __init__.py  actions.py  buttons.py  messages.py  parsers.py  states.py
epsilion_wars_mmorpg_automation/game/action/: __init__.py  combo_selectors.py  combo_strategy.py  common.py  farming.py  fishing.py  grinding.py  hunting.py  inventory.py  rewards.py
epsilion_wars_mmorpg_automation/game/state/: __init__.py  common.py  farming.py  fishing.py  grinding.py  hunting.py  inventory.py  rewards.py  vendor.py
epsilion_wars_mmorpg_automation/grind/: __init__.py  grinding.py  handlers.py  loop.py
epsilion_wars_mmorpg_automation/message_parsers/: checks.py  parsers.py
epsilion_wars_mmorpg_automation/parsers/: parsers.py
epsilion_wars_mmorpg_automation/parsers/checks/: __init__.py  messages.py  states.py
epsilion_wars_mmorpg_automation/plugins/: manager.py
epsilion_wars_mmorpg_automation/trainer/: __init__.py  captcha_solver.py  daily_reward_catcher.py  event_logging.py  farming.py  fishing.py  grinding.py  handlers.py  hunting.py  inventory.py  loop.py
epsilion_wars_mmorpg_automation/trainer/handlers/: __init__.py  common.py  farming.py  fishing.py  grinding.py  hunting.py  tear_up.py
epsilion_wars_mmorpg_automation/trainer/handlers_/: farming.py
etc/: fishing.md  grinding.md  repair.md  server-bot-init.md  supervisor-example.conf  tdata_converter.py
tests/: conftest.py
tests/actions/: conftest.py  test_captcha_answer.py  test_catch_reward.py  test_complete_battle.py  test_healing.py  test_ping.py  test_search_enemy.py  test_search_enemy_call.py  test_select_attack_direction.py  test_select_combo.py  test_select_defence_direction.py  test_select_reward_recipient.py  test_show_rewards.py
tests/actions/combo_startegy/: test_priority_strategy.py
tests/buttons/: test_get_buttons_flat.py
tests/captcha/: test_convert_number_words.py  test_game_specific.py  test_image_with_numbers.py  test_replace_eng_chars.py  test_simple_emoji.py  test_simple_grammar.py  test_simple_math.py  test_try_resolve.py
tests/locks/: test_healing_available.py
tests/message_parsers/: test_get_character_level.py  test_get_hp_level.py  test_is_captcha_state.py  test_is_died_state.py  test_is_hp_full_message.py  test_is_hp_updated_message.py  test_is_hunting_ready_message.py  test_is_selector_attack_direction.py  test_is_selector_combo.py  test_is_selector_defence_direction.py  test_is_win_state.py  test_parse_hp_level.py  test_strip_message.py
tests/notifications/: test_send_desktop_notify.py
tests/stats/: test_get_averages_per_hour.py  test_get_counters.py  test_show_stats.py
(+48 files in other folders)
