[tool.poetry]
name = "epsilion-wars-mmorpg-automation"
version = "0.1.0"
description = "Epsilion War mmorpg automation"
authors = ["Simon <spam@esemi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.26.1"
cryptg = "^0.4.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
desktop-notifier = "^3.4.2"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
line_length = 125
profile = "black"


[tool.poetry.scripts]
grind = 'epsilion_wars_mmorpg_automation.cli:grind_start'
captcha-solver = 'epsilion_wars_mmorpg_automation.cli:captcha_solver_start'