[tool.poetry]
name = "epsilion-wars-mmorpg-automation"
version = "0.2.0"
description = "Epsilion War mmorpg automation"
authors = ["Simon <spam@esemi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.34.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
desktop-notifier = "^3.5.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
mypy = "^1.9.0"
wemake-python-styleguide = "^0.18.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
line_length = 125
profile = "black"

[tool.poetry.scripts]
grind = 'epsilion_wars_mmorpg_automation.cli:grind_start'
farming = 'epsilion_wars_mmorpg_automation.cli:farming_start'
captcha-solver = 'epsilion_wars_mmorpg_automation.cli:captcha_solver_start'
reward-catcher = 'epsilion_wars_mmorpg_automation.cli:daily_reward_catcher_start'
fishing = 'epsilion_wars_mmorpg_automation.cli:fishing_start'
hunting = 'epsilion_wars_mmorpg_automation.cli:hunting_start'
inventory = 'epsilion_wars_mmorpg_automation.cli:inventory_start'